# ffxiv-timeline-app

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: mitigation-data.md
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/domain/: charges.test.ts  charges.ts  conflicts.test.ts  conflicts.ts  coverage.test.ts  coverage.ts  damage.test.ts  damage.ts  evaluate-timeline.test.ts  evaluate-timeline.ts  job-hp.ts  mit-windows.test.ts  mit-windows.ts  phases.test.ts  phases.ts  placement.test.ts  placement.ts  sanitize-text.test.ts  sanitize-text.ts  targeting.test.ts  targeting.ts  types.test.ts  types.ts
src/persistence/: ability-colors-storage.test.ts  ability-colors-storage.ts  declined-update-storage.test.ts  declined-update-storage.ts  image-export-options-storage.test.ts  image-export-options-storage.ts  job-hp-defaults-storage.ts  mit-lane-layout-storage.test.ts  mit-lane-layout-storage.ts  persisted-preference.test.ts  persisted-preference.ts  serialize.test.ts  serialize.ts  share-options-storage.test.ts  share-options-storage.ts  storage.ts  use-auto-save.ts  use-hydrate.ts
src/state/: ability-colors-store.ts  ability-colors.test.ts  history-store.test.ts  history-store.ts  image-export-options-store.ts  image-export-options.test.ts  job-hp-defaults-store.ts  job-hp-defaults.test.ts  mit-lane-layout-store.ts  mit-lane-layout.test.ts  share-options-store.ts  share-options.test.ts  timeline-store.test.ts  timeline-store.ts
src/ui/: AbilityColorsModal.tsx  AddPhaseModal.tsx  App.tsx  BossAbilityPanel.tsx  BossInspectorPanel.tsx  BossInstanceEditor.tsx  BossLane.tsx  BossPlacementPicker.tsx  CautionIcon.tsx  ClearTimelineModal.tsx  ConflictsPanel.tsx  ExportMenu.tsx  GearIcon.tsx  HelpModals.tsx  ImageExportModal.tsx  JobDefaultsModal.tsx  JobIcon.tsx  JobPicker.tsx  MenuBar.tsx  MitBar.tsx  MitIcon.tsx  MitInspectorPanel.tsx  MitLaneLayoutModal.tsx  MitPanel.tsx  MitReferenceDetail.tsx  MitReferenceModal.tsx  MitSubLane.tsx  OctocatIcon.tsx  PhaseDividers.tsx  PhasesPanel.tsx  PinEchoGlyph.tsx  PlayerLane.tsx  Ruler.tsx  (+64 more)
(+24 files in other folders)
