[package]
name = "ffxiv-timeline-app"
version = "0.3.0"
description = "FFXIV Raid Timeline planner"
authors = ["rmoskwa"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ffxiv_timeline_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
